vault/files/envoy/yaml/ignition.yaml
storage:
  files:
    - path: /home/envoy/envoy.d/envoy.yaml
      filesystem: root
      mode: 0777
      contents:
        inline: |
          admin:
            access_log_path: /tmp/admin_access.log
            address:
              socket_address:
                protocol: TCP
                address: 127.0.0.1
                port_value: 9901
          static_resources:
            listeners:
              - name: listener_0
                address:
                  socket_address:
                    protocol: TCP
                    address: 0.0.0.0
                    port_value: 8200
                filter_chains:
                  - filters:
                      - name: envoy.http_connection_manager
                        typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          stat_prefix: ingress_http
                          route_config:
                            name: local_route
                            virtual_hosts:
                              - name: local_service
                                domains: ["*"]
                                routes:
                                  - match:
                                      prefix: "/"
                                    route:
                                      cluster: service_vault
                          http_filters:
                            - name: envoy.router
            clusters:
              - name: service_vault
                connect_timeout: 0.25s
                type: STRICT_DNS
                # Comment out the following line to test on v6 networks
                dns_lookup_family: V4_ONLY
                lb_policy: ROUND_ROBIN
                load_assignment:
                  cluster_name: service_vault
                  endpoints:
                    - lb_endpoints:
                        - endpoint:
                            address:
                              socket_address:
                                address: vault-azure-workshop-vm-vault-workshop-0
                                port_value: 8200
                        - endpoint:
                            address:
                              socket_address:
                                address: vault-azure-workshop-vm-vault-workshop-1
                                port_value: 8200

systemd:
  units:
    - name: envoy.service
      enabled: true
      contents: |
        [Unit]
        Description=Envoy
        After=docker.service
        Requires=docker.service

        [Service]
        TimeoutStartSec=0
        ExecStartPre=-/usr/bin/docker pull envoyproxy/envoy-alpine:v1.12.0
        ExecStart=/usr/local/bin/systemd-docker --cgroups name=systemd run --rm --name %n -d -p 9901:9901 -p 8200:8200 -v /home/abelgana/envoy.yaml:/etc/envoy/envoy.yaml envoyproxy/envoy-alpine:v1.12.0
        Restart=always
        RestartSec=10s
        Type=notify
        NotifyAccess=all

        [Install]
        WantedBy=multi-user.target
